--- a/style/style.css
+++ b/style/style.css
@@ -125,7 +125,20 @@ main > section{
     font-size: 1.25rem;
     margin-top: 0px;
     margin-bottom: 0px;
-   
+}
+#experience-badge{
+    padding:45px 42px ;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect{
+    width: 100%;
 }
      /* some facts related styles */
 .facts-container{
@@ -172,6 +185,7 @@ main > section{
 
     .navber,
      .nav-links,
+     .features,
       .teams{
         flex-direction: column;
         max-width: 530px;
@@ -195,10 +209,14 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
   }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -209,5 +227,9 @@ main > section{
         gap: 50px;
         justify-items: center;
 
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
